--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -131,7 +131,7 @@ body {
           padding: 0px 35px;
           margin-top: 11px;
           margin-bottom: -12px;
-          color: #bfbfbf;
+          color: #dadada;
           &:hover {
             color: #ffffff;
           }
