--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -1,9 +1,10 @@
 //color variable
-$site-color: #0000b0;
-$site-color-hover: #00007b;
+$site-color: #0D386D;
+$site-color-hover: #0d1f3f;
 $site-color-light: rgb(56, 85, 224);
+$site-color-extra-light: rgb(108, 163, 200);
 $grey: #b1b1b1;
-$grey-light: #d0d0d0;
+$grey-light: #E6E6E6;
 $grey-extra-light: #f0f0f0;
 $grey-dark: #3c3c3c;
 $grey-text: rgb(147, 146, 146);
@@ -40,6 +41,13 @@ $slow-speed: 1.5s;
 $middle-speed: 1s;
 $fast-speed: 0.5s;
 
+//mixins
+@mixin linear-gradient-three($direction, $direction-webkit, $color-one, $color-two, $color-three) {
+  background: -webkit-linear-gradient($direction-webkit, $color-one , $color-two, $color-three); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient($direction, $color-one , $color-two, $color-three); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient($direction, $color-one , $color-two, $color-three); /* For Firefox 3.6 to 15 */
+}
+
 //import files
 @import "auth";
 @import "tabs";
@@ -53,13 +61,19 @@ $fast-speed: 0.5s;
 @import "pages";
 
 //fonts
-@import url(http://fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
+//@import url(//fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
 body {
-  font-family: 'Exo 2' !important;
+  .row{
+
+  }
+  font-family: 'Arial';
   #header-navbar {
-    background: $site-color-light;
-    border-bottom: $site-color-light;
+    background: transparent;
+    border-bottom: none;
     color: #ffffff;
+    &.welcome{
+      background: $site-color;
+    }
 
     &.to-top{
       position: relative;
@@ -79,6 +93,9 @@ body {
     }
     #header-navbar-collapse{
       padding: 15px;
+    }
+    .container{
+      background: $site-color;
     }
     .navbar-header {
       .navbar-brand {
@@ -131,9 +148,10 @@ body {
           padding: 0px 35px;
           margin-top: 11px;
           margin-bottom: -12px;
-          color: #dadada;
+          font-size: 1.2em;
+          color: #ffffff;
           &:hover {
-            color: #ffffff;
+            color: $grey-light;
           }
         }
         &.active {
@@ -204,6 +222,17 @@ body {
       }
     }
 
+  }
+
+  .footer{
+    background: transparent;
+    &.welcome{
+      background: $site-color;
+      color: #ffffff;
+    }
+    .container{
+      color: #000000;
+    }
   }
 
   .container{
@@ -425,12 +454,12 @@ body {
     //min-height: $max-hotel-height;
     img {
       position: absolute;
-      width: 130px;
-      height: 130px;
+      width: 34px;
+      height: 34px;
       left: 50%;
       top: 50%;
-      margin-left: -65px;
-      margin-top: -65px;
+      margin-left: -17px;
+      margin-top: -17px;
     }
   }
 
