--- a/web/css/flight.scss
+++ b/web/css/flight.scss
@@ -1,6 +1,7 @@
 .flight-wrapper{
-  padding: 0px;
-  border-bottom: 1px solid $grey-light;
+  padding-left: 0px;
+  border: $border-wrapper-in-list;
+  border-radius: 4px;
   margin-top: 5px;
   margin-bottom: 5px;
   &:nth-of-type(1){
