--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -17,11 +17,13 @@ $yellow-dirty: #edd98b;
 $yellow-dirty-hover: #bba76b;
 $gold: #ffda0c;
 $milk: rgba(255, 255, 255, 0.3);
+$yellow-top: #c5f498;
 
 //borders
 $grey-border: #bfbebe;
 $light-grey-border: 1px solid #DAD9D9;
 $nav-light-grey-border: 0px 2px 4px -1px #bfbebe;
+$border-wrapper-in-list: 2px solid $grey;
 
 //shadows
 $grey-shadow: 2px 5px 7px rgba(203, 203, 203, 0.5);
@@ -516,5 +518,8 @@ body {
     &.other{
       background-position: -5px -324px;
     }
+  }
+  .license-top{
+    color: $yellow-top;
   }
 }
