--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -1,7 +1,9 @@
 #user-tour-response, #user-tour-response-list, #manager-offers-response,
 #manager-hot-tours-response, #user-hot-tours-response, #user-favourite-tours-response{
   .user-tour-wrapper{
-    border-bottom: 1px solid $grey-light;
+    padding-left: 10px;
+    border: $border-wrapper-in-list;
+    border-radius: 4px;
     margin-top: 5px;
     margin-bottom: 5px;
     &:nth-of-type(1){
@@ -57,7 +59,7 @@
         display: inline-block;
         position: absolute;
         top: 4px;
-        left: -22px;
+        right: -5px;
         font-size: 1.2em;
         color: $grey-light-text;
         &.favourite{
@@ -78,6 +80,7 @@
         right: -10px;
         color: $red;
         font-size: 1.2em;
+        top: 5px;
       }
     }
 
