--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -3,6 +3,7 @@
   .nav-tabs{
     box-shadow: $nav-light-grey-border;
     margin-top: -7px;
+    z-index: 55;
     li{
       width: 20%;
       background: $site-color;
@@ -94,9 +95,9 @@
       border-width: 30px;
       transform: rotate(180deg);
       margin-left: 15px;
-      z-index: 100;
+      z-index: 50;
       &:hover{
-        border-color: transparent $site-color-hover transparent transparent;
+        border-color: transparent $site-color transparent transparent;
       }
       &.open{
         visibility: visible;
@@ -121,7 +122,7 @@
           filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
         }
         &.to-right{
-          margin-left: 295px;
+          left: 355px;
         }
       }
       .glyphicon{
@@ -131,7 +132,7 @@
         content: '';
         position: absolute;
         height: 500px;
-        width: 2px;
+        width: 8px;
         right: -30px;
         top: -200px;
         background: $site-color;
