--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -46,7 +46,7 @@
       .hotel-star{
         position: absolute;
         left: 0px;
-        top: 34px;
+        top: 38px;
         font-size: 1.1em;
         .glyphicon-star-empty{
           color: $grey-text;
@@ -70,7 +70,8 @@
         width: 20px;
         height: 20px;
         position: absolute;
-        margin-left: -22px;
+        right: -5px;
+        top: 3px;
         &.remove-hot-tour{
           margin-left: 0px;
         }
@@ -86,6 +87,7 @@
 
     .body, .people{
       padding: 0px;
+      margin-top: 5px;
       .describe{
         font-weight: 300;
       }
@@ -108,6 +110,8 @@
       }
       &.offer{
         font-size: 0.8em;
+        border-left: 2px solid $grey;
+        padding-left: 5px;
       }
     }
 
@@ -143,7 +147,7 @@
 
     //small column
     &.small-column{
-      padding: 0px 15px;
+      padding: 0px 8px;
       .header-info{
         .created{
           display: none;
@@ -168,6 +172,11 @@
       .body{
         .hotel-photo{
           width: 100%;
+        }
+      }
+      a{
+        &.btn-primary {
+          padding: 4px 2px;
         }
       }
     }
@@ -217,7 +226,7 @@
     margin-top: 10px;
     margin-left: 20px;
     .name{
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: 600;
       color: $site-color;
     }
@@ -226,8 +235,8 @@
       font-weight: 600;
       right: 29px;
       position: absolute;
-      top: 4px;
-      font-size: 0.9em;
+      top: 2px;
+      font-size: 1.1em;
     }
     .stars{
       position: absolute;
@@ -294,8 +303,8 @@
           }
         }
         .body {
-          font-size: 0.85em;
-          line-height: 12px;
+          font-size: 0.95em;
+          line-height: 16px;
           text-align: justify;
         }
       }
