--- a/web/css/flight.scss
+++ b/web/css/flight.scss
@@ -1,16 +1,21 @@
 .flight-wrapper{
-  padding-left: 0px;
   border: $border-wrapper-in-list;
   border-radius: 4px;
   margin-top: 5px;
   margin-bottom: 5px;
   &:nth-of-type(1){
-    margin-top: 20px;
+    margin-top: 5px;
+  }
+  &.padding{
+    padding-left: 0px;
+    padding-bottom: 5px;
   }
   .header{
+    text-align: right;
+    font-size: 0.8em;
+    padding-right: 0px;
     .count{
-      font-size: 0.9em;
-      color: $grey-light-text;
+
     }
     .created{
       margin-left: 10px;
@@ -28,7 +33,7 @@
     }
   }
   .body{
-    padding: 0px;
+    padding-left: 0px;
     .describe{
       font-weight: 300;
     }
@@ -36,9 +41,16 @@
       font-weight: 600;
       font-size: 0.9em;
     }
+    div{
+      padding-right: 0px;
+    }
+    .central{
+      border-left: 2px solid $grey;
+    }
   }
   .buttons{
-    padding-left: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
     a{
       border-radius: 0px;
       &.btn-primary{
