--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -436,12 +436,12 @@
           max-width: 300px;
           display: block;
           width: 100%;
-          height: 34px;
-          padding: 6px 12px;
+          height: 28px;
+          padding: 0px 12px;
           font-size: 14px;
           line-height: 1.42857143;
           color: #555;
-          background-color: #fff;
+          background-color: $grey-light;
           background-image: none;
           border: 1px solid #ccc;
           border-radius: 0px;
