--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -65,6 +65,9 @@ $fast-speed: 0.5s;
 //fonts
 //@import url(//fonts.googleapis.com/css?family=Exo+2:400,300,700&subset=latin,cyrillic);
 body {
+  .container{
+    width: 1170px;
+  }
   .row{
 
   }
