--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -313,6 +313,7 @@
         border: $light-grey-border;
         .header {
           background: $grey;
+          margin-left: 0px;
           .date {
             color: #ffffff;
             float: right;
