--- a/web/css/hotel.scss
+++ b/web/css/hotel.scss
@@ -239,6 +239,7 @@
         border: $light-grey-border;
         .header {
           background: $grey;
+          margin-left: 0px;
           .date {
             color: #ffffff;
             float: right;
