--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -4,6 +4,8 @@
     box-shadow: $nav-light-grey-border;
     margin-top: -7px;
     z-index: 55;
+    overflow: hidden;
+    height: 36px;
     li{
       width: 20%;
       background: $site-color;
@@ -13,13 +15,30 @@
         color: #ffffff;
         border-radius: 0;
         background: $site-color;
+        text-transform: uppercase;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+        line-height: 18px;
+        height: 35px;
+        outline: none;
         &:hover{
           background: $site-color-hover;
           border: 1px solid $site-color-hover;
         }
       }
+      .icon-tab{
+        position: absolute;
+        left: 15px;
+        top: 10px;
+        font-size: 1.2em;
+        color: #ffffff;
+        z-index: 55;
+      }
       &.active{
-        background: #ffffff;
+        background: $site-color;
+        .icon-tab{
+          color: $site-color;
+        }
         a{
           color: $site-color;
           font-weight: 600;
@@ -73,18 +92,6 @@
     .back-to-main, .back-to-main-from-tour, .back-to-main-from-tour-manager,
     .back-to-main-from-user-get-tour, .back-to-main-from-user-flight{
       visibility: hidden;
-      /*width: 30px;
-      height: 160px;
-      position: fixed;
-      left: 75px;
-      top: 107px;
-      background: $site-color-light;
-      z-index: 100;
-      vertical-align: middle;
-      line-height: 110px;
-      box-shadow: 2px 0px 2px 0px $blue-shadow-color;
-      border-bottom-right-radius: 30px;
-      border-top-right-radius: 30px;*/
       color: white;
       cursor: pointer;
       position: fixed;
@@ -108,16 +115,12 @@
           font-size: 1.35em;
           /* Safari */
           -webkit-transform: rotate(-270deg);
-
           /* Firefox */
           -moz-transform: rotate(-270deg);
-
           /* IE */
           -ms-transform: rotate(-270deg);
-
           /* Opera */
           -o-transform: rotate(-270deg);
-
           /* Internet Explorer */
           filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
         }
@@ -384,7 +387,7 @@
             }
             &.field-gettourform-adult_amount, &.field-gettourform-children_under_12_amount,
             &.field-gettourform-children_under_2_amount{
-              width: 163px;
+              width: 162px;
               margin-left: 0px;
               display: inline-block;
               float: left;
@@ -394,11 +397,19 @@
               }
             }
             &.field-gettourform-adult_amount{
-              width: 107px;
+              width: 108px;
             }
-            #gettourform-room_count{
-              &.int{
-                left: 138px;
+            &.field-gettourform-children_under_2_amount{
+              margin-left: -4px;
+            }
+            &.field-gettourform-room_count {
+              label {
+                right: -3px;
+              }
+              #gettourform-room_count {
+                &.int {
+                  left: 138px;
+                }
               }
             }
             &.field-gettourform-night_min, &.field-gettourform-night_max{
