--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -105,6 +105,7 @@
       border-width: 30px;
       transform: rotate(180deg);
       margin-left: 15px;
+      margin-top: 15px;
       z-index: 50;
       &:hover{
         border-color: transparent $site-color transparent transparent;
@@ -130,9 +131,11 @@
         &.to-right{
           left: 265px;
           position: absolute;
-          top: 49px;
+          top: 59px;
+          margin-top: -1px;
           &:before{
             height: 400px;
+            top: -180px;
           }
         }
       }
