--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -127,6 +127,9 @@
       padding-left: 5px;
       padding-right: 5px;
       margin-top: 5px;
+      .offers{
+        margin-top: 15px;
+      }
       .btn{
         border-radius: 0px;
         padding: 4px 5px;
