--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -174,6 +174,10 @@
           margin-left: -5000px;
           visibility: hidden;
         }
+        .create-hot-tour-manager{
+          width: 270px;
+          margin-left: -10px;
+        }
         .filter, .create-tour, .create-flight {
           width: 270px;
           margin-left: -10px;
