--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -202,6 +202,9 @@
           display: block;
         }
       }
+      &.active{
+        border: $border-wrapper-in-list;
+      }
     }
   }
 }
