fix welcome page

--- a/web/css/auth.scss
+++ b/web/css/auth.scss
@@ -89,6 +89,10 @@
   [name="login-button"]{
     border-radius: 0px;
   }
+  .forgot-password{
+    margin-top: 7px;
+    margin-left: 10px;
+  }
 }
 .bg-wrap{
   position: absolute;
