--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -410,6 +410,10 @@
                 background-position: 98% -34px;
               }
             }
+            &.field-gettourform-children_under_12_amount{
+              margin-left: -4px;
+              width: 165px;
+            }
             &.field-gettourform-adult_amount{
               width: 108px;
             }
