--- a/web/css/hotel.scss
+++ b/web/css/hotel.scss
@@ -249,6 +249,7 @@
           font-size: 0.95em;
           line-height: 16px;
           text-align: justify;
+          padding: 0px 10px;
         }
       }
     }
