--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -64,12 +64,12 @@
       .glyphicon-heart, .glyphicon-heart-empty{
         display: inline-block;
         position: absolute;
-        top: 4px;
+        top: -1px;
         right: -5px;
         font-size: 1.2em;
         color: $grey-light-text;
         &.favourite{
-          color: red;
+          color: $red;
         }
       }
       .replace-loader{
@@ -142,10 +142,10 @@
       .tour-cost{
         color: $cost;
         font-weight: 600;
-        font-size: 1.2em;
+        font-size: 1.3em;
         min-width: 100px;
         .currency{
-          font-size: 0.7em;
+          font-size: 0.6em;
         }
       }
       .company-name{
@@ -192,6 +192,7 @@
         }
       }
       .buttons {
+        text-align: center;
         margin-left: -15px;
         a {
           &.btn-primary {
