--- a/web/css/hotel.scss
+++ b/web/css/hotel.scss
@@ -252,6 +252,18 @@
           padding: 0px 10px;
         }
       }
+      &::-webkit-scrollbar {
+        width: 10px;
+      }
+      &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px white;
+        border-radius: 0px;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+        background: $grey-light;
+      }
     }
 
     .hotel-facilities{
@@ -268,6 +280,19 @@
           font-size: 0.85em;
           color: $grey-text;
         }
+      }
+
+      &::-webkit-scrollbar {
+        width: 10px;
+      }
+      &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px white;
+        border-radius: 0px;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+        background: $grey-light;
       }
     }
   }
