--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -344,6 +344,18 @@
           padding: 0px 10px;
         }
       }
+      &::-webkit-scrollbar {
+        width: 10px;
+      }
+      &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px white;
+        border-radius: 0px;
+      }
+      &::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+        background: $grey-light;
+      }
     }
 
     .hotel-facilities{
