--- a/web/css/auth.scss
+++ b/web/css/auth.scss
@@ -13,7 +13,7 @@
     text-shadow: $dark-text-shadow;
   }
   p{
-    color: $site-color;
+    color: black;
     padding-right: 8.33333333%;
     &.error-field{
       color: $red;
