--- a/web/css/flight.scss
+++ b/web/css/flight.scss
@@ -62,7 +62,8 @@
       font-size: 1.2em;
       color: $cost;
       font-weight: 600;
-      min-width: 100px;
+      min-width: 90px;
+      display: inline-block;
     }
   }
 }
