--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -143,7 +143,8 @@
         color: $cost;
         font-weight: 600;
         font-size: 1.3em;
-        min-width: 100px;
+        min-width: 90px;
+        display: inline-block;
         .currency{
           font-size: 0.6em;
         }
