--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -16,7 +16,7 @@ $yellow-light: #ffe577;
 $yellow-dirty: #edd98b;
 $yellow-dirty-hover: #bba76b;
 $gold: #ffda0c;
-$cost: #ff9200;
+$cost: #ffc82f;
 $milk: rgba(255, 255, 255, 0.3);
 $yellow-top: #c5f498;
 
