--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -538,6 +538,7 @@
         }
         .list-data{
           float: left;
+          padding: 0px;
         }
         &.small-left{
           padding-left: 15px;
