fix night count

--- a/web/css/tour.scss
+++ b/web/css/tour.scss
@@ -307,7 +307,7 @@
         font-size: 0.95em;
         .price{
           font-size: 1.2em;
-          color: #000000;
+          color: $cost;
         }
         .surcharge{
           font-size: 0.7em;
