--- a/web/css/flight.scss
+++ b/web/css/flight.scss
@@ -136,6 +136,11 @@
         font-size: 1.2em;
         margin-top: 2px;
       }
+      .cost{
+        color: $cost;
+        font-weight: 600;
+        font-size: 2.2em;
+      }
     }
   }
 }
