--- a/web/css/tabs.scss
+++ b/web/css/tabs.scss
@@ -155,6 +155,9 @@
         top: -200px;
         background: $site-color;
       }
+      &.chrome{
+        margin-left: 15px;
+      }
     }
 
     .main-tab-container {
