fix user flight

--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -17,6 +17,7 @@ $yellow-dirty: #edd98b;
 $yellow-dirty-hover: #bba76b;
 $gold: #ffda0c;
 $cost: #ffc82f;
+$cost-flight: #f8ca03;
 $milk: rgba(255, 255, 255, 0.3);
 $yellow-top: #c5f498;
 
