--- a/web/css/flight.scss
+++ b/web/css/flight.scss
@@ -133,14 +133,22 @@
       .value {
         font-weight: 600;
         color: $grey-dark;
-        font-size: 1.2em;
+        font-size: 1.1em;
         margin-top: 2px;
       }
       .cost{
         color: $cost;
         font-weight: 600;
-        font-size: 2.2em;
+        &.number {
+          font-size: 3em;
+        }
+        &.currency{
+          font-size: 1.5em;
+        }
       }
+    }
+    .company-info{
+      padding: 0px;
     }
   }
 }
