--- a/web/css/main.scss
+++ b/web/css/main.scss
@@ -252,7 +252,7 @@ body {
       margin-top: -60px;
       width: 100%;
       min-height: 800px;
-      background: url("/images/default-page.jpg");
+      background: url("/images/default-page-dark.jpg");
       background-size: cover;
       .site-login, .site-registration{
         margin-top: 100px;
@@ -269,7 +269,7 @@ body {
     &.welcome{
       width: 100%;
       min-height: 800px;
-      background: url("/images/default-page.jpg");
+      background: url("/images/default-page-dark.jpg");
       background-size: cover;
       text-align: center;
       .text {
